Fix footer-copyright centering on iOS Safari

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -543,6 +543,7 @@ header .navbar-nav .nav-link {
 
   padding: $footer-spacing;
   font-size: $footer-note-size;
+  text-align: center;
 }
 
 // Pagination
